syntax = "proto3";
option java_package = "io.github.pmackowski.rsocket.raft.gossip.protobuf";
option java_multiple_files = true;

message GossipMetadataRequest {
    int32 message_type = 1;
}

message PingRequest {
}

message PingResponse {
    bool ack = 1;
}

message PingReqRequest {
}

message PingReqResponse {
    bool ack = 1;
}


///

message Gossip {
    enum Suspicion {
        ALIVE = 0;
        SUSPECT = 1;
        CONFIRM = 2;
    }

    Suspicion suspicion = 1;
    int32 incarnation = 2;
    int32 origin_node_id = 3;
    int32 node_id = 4;
}

message Ping {
    repeated Gossip gossips = 1;
}

message Ack {
    repeated Gossip gossips = 1;
}

message PingReq {
    repeated Gossip gossips = 1;
}


